first aproach list products and input formula

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,12 +1,18 @@
-@import 'reset';
+@import 'reset', 'product';
 
-.main {
+.fullPage {
   width: 100vw;
   height: 100vh;
   display: flex;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  & > p {
+main {
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+  & > h1 {
     margin: 50px;
     font-size: xx-large;
     box-sizing: border-box;
