--- a/scss/product.scss
+++ b/scss/product.scss
@@ -1,3 +1,5 @@
+@import 'mixins';
+
 .pricesFormulasPage {
   width: 100%;
   height: 100vh;
@@ -72,6 +74,9 @@
   }
 
   &_input {
+    width: 33%;
+    min-width: 150px;
+
     &_inputContainer {
       color: rgb(70, 70, 70);
       display: flex;
@@ -79,14 +84,15 @@
       gap: 0.2rem;
 
       & > span {
-        font-size: large;
+        font-size: x-large;
       }
 
       & > input {
+        color: rgb(70, 70, 70);
         width: 80%;
         min-width: 100px;
-        padding: 0.2rem 0.5rem;
-        font-size: large;
+        padding: 0.1rem 0.25rem;
+        font-size: x-large;
         border: 1px solid currentColor;
         border-radius: 5px;
       }
@@ -95,8 +101,39 @@
         width: 80%;
         min-width: 100px;
         padding: 0.2rem 0.5rem;
-        font-size: large;
+        font-size: x-large;
       }
     }
+    &_error {
+      color: rgb(173, 35, 35);
+      padding-top: 0.5rem;
+      padding-left: 3.5rem;
+      font-weight: bold;
+    }
+  }
+}
+
+.input_button {
+  padding: 0.2rem 0.5rem;
+  font-size: medium;
+  border: 1px solid currentColor;
+  border-radius: 5px;
+  background-color: transparent;
+  font-weight: bold;
+  margin-top: 1rem;
+  text-align: center;
+  margin-right: 1rem;
+  cursor: pointer;
+
+  $color: rgb(100, 100, 100);
+  @include customBurronColors($color);
+
+  &_Save {
+    $color: rgb(38, 121, 38);
+    @include customBurronColors($color);
+  }
+  &_Cancel {
+    $color: rgb(173, 35, 35);
+    @include customBurronColors($color);
   }
 }
